--- a/static/template.html
+++ b/static/template.html
@@ -1,5 +1,5 @@
 <!-- ###TEMPLATE### begin -->
-	<p>###CITY### ###REGION### search: ###ZIP### ###SEARCHBUTTON###</p>
+	<p>###CITY### ###REGION### search: ###ZIP### ###RADIUSSELECT### ###SEARCHBUTTON###</p>
 	###MAPS###
 	###ADDRESSLIST###
 <!-- ###TEMPLATE### end -->
