--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/scheibome/st_address_map/refactoring/Resources/Public/Stylesheets/staddressmap.css" media="screen">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>TYPO3 Extension st_address_map by scheibome</title>
+    <title>TYPO3 Extension st_address_map by Thomas (Scheibo) Scheibitz</title>
   </head>
 
   <body>
@@ -29,29 +30,69 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            <a id="what-does-it-do" class="anchor" href="#what-does-it-do" aria-hidden="true">
+              <span aria-hidden="true" class="octicon octicon-link"></span>
+            </a>
+            What does it do?
+          </h3>
+          <p>With the extension st_address_map you're able to show addresses out of tt_address in Google Maps. Further it's possible to show the addresses in a list. Therefore you're also able to define your own “select fields”. Within a search field the user can search for postal codes. After pushing the searchbutton the direct hits of postal codes and addresses are shown. Please keep in mind, that only the postal codes included in the addresses can be found. Via constant editor for example the searchradius in kilometers can be edited.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+          <h3>
+            <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer
+            Templates</h3>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+          <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse
+            through them. You can easily go back to edit your page before publishing. After publishing your page, you
+            can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+          <h3>
+            <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating
+            pages manually</h3>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+          <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your
+            repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support
+            Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and
+            footers without having to copy them across every page. It also offers intelligent blog support and other
+            advanced templating features.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+          <h3>
+            <a id="demo" class="anchor" href="#demo" aria-hidden="true">
+              <span aria-hidden="true" class="octicon octicon-link"></span>
+            </a>
+            Demo
+          </h3>
+          <div class="Demo">
+            <div class="staddressmap"
+                 data-staddressmap-googleapikey="">
+              <div class="staddressmap__filter">
+                <input class="staddressmap__searchfrompoint" placeholder="PLZ oder Stadt" value="" type="text">
+                <select class="staddressmap__searchradius" size="1">
+                  <option value="5">Umkreis 5 Km</option>
+                  <option value="10">Umkreis 10 Km</option>
+                  <option value="20" selected="selected">Umkreis 20 Km</option>
+                  <option value="50">Umkreis 50 Km</option>
+                  <option value="100">Umkreis 100 Km</option>
+                </select>
+                <button class="staddressmap__searchsubmit" role="button">Suchen</button>
+              </div>
+              <div class="staddressmap__googlemap" style="height: 200px;"></div>
+              <div class="vcard"
+                   itemscope itemtype="http://schema.org/Person"
+                   data-staddressmap-latitude="47.848999"
+                   data-staddressmap-longitude="12.113791"
+                   data-mapmarkercontent="1">
+                Thomas Scheibitz<br />
+                scheibitz.com
+                <div class="adr" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                  Petersbergstraße 1
+                  38026 Rosenheim
+                  Deutschland
+                </div>
+                <div class="staddressmap__distance"></div>
+              </div>
+            </div>
+          </div>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
 
         <aside id="sidebar">
